--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ uvicorn = {version = "0.30.1", extras = ["standard"]}
 sqlalchemy = "2.0.31"
 psycopg = {version = "3.1.19", extras = ["binary"]}
 alembic = "1.13.2"
-pydantic = {version = "2.7.4", extras = ["email"]}
+pydantic = {version = ">=2.11.0,<3", extras = ["email"]}
 python-dotenv = "1.0.1"
 jinja2 = "3.1.4"
 redis = "5.0.4"
