--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,12 +20,12 @@ celery = {version = "5.4.0", extras = ["redis"]}
 prometheus-client = "0.20.0"
 httpx = "0.27.0"
 anyio = "4.2.0"
-opentelemetry-api = "1.26.0"
-opentelemetry-sdk = "1.26.0"
-opentelemetry-exporter-otlp = "1.26.0"
-opentelemetry-instrumentation-fastapi = "0.47b0"
-opentelemetry-instrumentation-sqlalchemy = "0.47b0"
-opentelemetry-instrumentation-celery = "0.47b0"
+opentelemetry-api = ">=1.32.0,<2"
+opentelemetry-sdk = ">=1.32.0,<2"
+opentelemetry-exporter-otlp = ">=1.32.0,<2"
+opentelemetry-instrumentation-fastapi = "0.53b0"
+opentelemetry-instrumentation-sqlalchemy = "0.53b0"
+opentelemetry-instrumentation-celery = "0.53b0"
 python-jose = {version = "3.3.0", extras = ["cryptography"]}
 passlib = {version = "1.7.4", extras = ["bcrypt"]}
 bcrypt = "4.0.1"
